--- a/mos.yml
+++ b/mos.yml
@@ -7,8 +7,8 @@ sources:
   - src
 
 libs:
-  - origin: https://github.com/mongoose-os-libs/core
-  - origin: https://github.com/mongoose-os-libs/vfs-common
+  - location: https://github.com/mongoose-os-libs/core
+  - location: https://github.com/mongoose-os-libs/vfs-common
 
 # Init after peripheral libraries likely to be used for external storage.
 init_after:
